# traffic-coordination

./: .gitignore  README.md  pyproject.toml
controllers/: __init__.py  actuated.py  anticipatory.py  base.py  corridor.py  dqn.py  fixed_time.py  max_pressure.py
docs/: JOURNAL.md
envs/: __init__.py  corridor_env.py  intersection_env.py
experiments/: __init__.py  corridor_eval.py  corridor_perception.py  corridor_train.py  eval.py  perception_eval.py  rollout.py  safety_demo.py  train.py
metrics/: __init__.py  report.py
safety/: __init__.py  conflict_monitor.py
scenarios/: arterial_corridor.yaml  arterial_corridor_varying.yaml  divided_highway_side_street.yaml
sim/: __init__.py  corridor.py  intersection.py  signal.py  vehicle.py
viz/: __init__.py  render.py
