[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-rl"
version = "0.1.0"
description = "Adaptive, camera-augmented traffic signal control — M1: single-intersection simulator + learning controller"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
learn = ["torch>=2.0"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["sim", "envs", "controllers", "metrics", "viz", "experiments"]

[tool.setuptools.package-data]
scenarios = ["*.yaml"]
